<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFi Servo Controller</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="title_activity_display_message">My Message</string>
    <string name="status_label">Status:</string>
    <string name="connection_status">Not Connected</string>
    <string name="connection_label">1</string>
	<string name="connect_button_text">Connect</string>
	
	<string name="field_hint">IP Address</string>
	
    
</resources>
