<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="8" >

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:max="254" />
    
    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="28dp" 
        android:max="254" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar2"
        android:layout_marginTop="28dp" 
        android:max="254" />    
        
     <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar3"
        android:layout_marginTop="28dp" 
        android:max="254" />  
                  
     <SeekBar
        android:id="@+id/seekBar5"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar4"
        android:layout_marginTop="28dp" 
        android:max="254" />  
        
       <SeekBar
        android:id="@+id/seekBar6"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar5"
        android:layout_marginTop="28dp" 
        android:max="254" />  
           
     <SeekBar
        android:id="@+id/seekBar7"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar6"
        android:layout_marginTop="28dp" 
        android:max="254" />   
         
     <SeekBar
        android:id="@+id/seekBar8"
        android:layout_width="325dp"        
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar7"
        android:layout_marginTop="28dp" 
        android:max="254" />   
              
    <TextView
        android:id="@+id/TextView1"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar2"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />
    
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar3"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar4"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />
    
    <TextView
        android:id="@+id/TextView5"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar5"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar6"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />
    
    <TextView
        android:id="@+id/TextView7"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar7"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />

    <TextView
        android:id="@+id/TextView8"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar8"
        android:layout_marginTop="6dp"
        android:text="@string/connection_label" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/connect_button_text" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/field_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="30dp"
        android:text="@string/status_label" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView9"
        android:text="@string/connection_status" />
    
</RelativeLayout>